@@ -32,7 +32,7 @@
  * libraries compiled, and then execute it with plain jtreg, like:
  *
  *  $ bin/jtreg -jdk:<path-to-tested-jdk> \
- *              -nativepath:<path-to-build-dir>/support/test/jdk/jtreg/native/manual/lib/ \
+ *              -nativepath:<path-to-build-dir>/images/test/jdk/jtreg/native/ \
  *              -concurrency:auto \
  *              ./test/jdk/java/foreign/TestMatrix.java
  */
@@ -45,8 +45,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=false
  *   TestUpcallHighArity
  */
 
@@ -58,8 +58,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=false
  *   TestUpcallHighArity
  */
 
@@ -71,8 +71,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=true
  *   TestUpcallHighArity
  */
 
@@ -84,33 +84,55 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=true
  *   TestUpcallHighArity
  */
 
-/* @test id=Downcall-F
+/* @test id=DowncallScope-F
  * @enablePreview
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * | os.arch == "ppc64" | os.arch == "ppc64le" | os.arch == "s390x"
- * @build NativeTestHelper CallGeneratorHelper TestDowncall
+ * @build NativeTestHelper CallGeneratorHelper TestDowncallBase
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   TestDowncall
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   TestDowncallScope
  */
 
-/* @test id=Downcall-T
+/* @test id=DowncallScope-T
  * @enablePreview
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * | os.arch == "ppc64" | os.arch == "ppc64le" | os.arch == "s390x"
- * @build NativeTestHelper CallGeneratorHelper TestDowncall
+ * @build NativeTestHelper CallGeneratorHelper TestDowncallBase
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   TestDowncall
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   TestDowncallScope
+ */
+
+/* @test id=DowncallStack-F
+ * @enablePreview
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @build NativeTestHelper CallGeneratorHelper TestDowncallBase
+ *
+ * @run testng/othervm/native/manual
+ *   --enable-native-access=ALL-UNNAMED
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   TestDowncallStack
+ */
+
+/* @test id=DowncallStack-T
+ * @enablePreview
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @build NativeTestHelper CallGeneratorHelper TestDowncallBase
+ *
+ * @run testng/othervm/native/manual
+ *   --enable-native-access=ALL-UNNAMED
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   TestDowncallStack
  */
 
 /* @test id=UpcallScope-FF
@@ -121,8 +143,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=false
  *   TestUpcallScope
  */
 
@@ -134,8 +156,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=false
  *   TestUpcallScope
  */
 
@@ -147,8 +169,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=true
  *   TestUpcallScope
  */
 
@@ -160,8 +182,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=true
  *   TestUpcallScope
  */
 
@@ -173,8 +195,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=false
  *   TestUpcallAsync
  */
 
@@ -186,8 +208,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=false
  *   TestUpcallAsync
  */
 
@@ -199,8 +221,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=true
  *   TestUpcallAsync
  */
 
@@ -212,8 +234,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=true
  *   TestUpcallAsync
  */
 
@@ -225,8 +247,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=false
  *   TestUpcallStack
  */
 
@@ -238,8 +260,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=false
  *   TestUpcallStack
  */
 
@@ -251,8 +273,8 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=false
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=true
  *   TestUpcallStack
  */
 
@@ -264,7 +286,18 @@
  *
  * @run testng/othervm/native/manual
  *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
+ *   -Djdk.internal.foreign.DowncallLinker.USE_SPEC=true
+ *   -Djdk.internal.foreign.UpcallLinker.USE_SPEC=true
  *   TestUpcallStack
+ */
+
+/*
+ * @test id=VarArgs
+ * @enablePreview
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @build NativeTestHelper CallGeneratorHelper
+ *
+ * @run testng/othervm/native/manual
+ *   --enable-native-access=ALL-UNNAMED
+ *   TestVarArgs
  */
